Fix employer link wrapping, BibTeX inline/animation, publication page layout
- Move icon inside <a> tag for employer link to prevent line break
- Make BibTeX toggle inline with Download Paper (use <span> + <div>)
- Add smooth slide animation (max-height transition) for BibTeX panel
- Add inline bibtex to building simplification paper (was only bibtexurl)
- Label excerpt as "Abstract:" on listing page
- Add "Abstract" heading on single publication page
- Use <div class="pub-links"> instead of <p> for links section
- Remove margin in excerpt <p> for cleaner collapsible

--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -70,6 +70,11 @@
   position: relative;
 }
 
+.excerpt-label {
+  margin-bottom: 0.2em;
+  font-size: $type-size-6;
+}
+
 .excerpt-collapsible {
   margin-top: 0;
   font-size: $type-size-6;
@@ -79,6 +84,10 @@
 
   &.expanded {
     max-height: none;
+  }
+
+  p {
+    margin: 0;
   }
 }
 
@@ -95,6 +104,11 @@
     opacity: 1;
     text-decoration: underline;
   }
+}
+
+.pub-links {
+  margin-top: 0.3em;
+  font-size: $type-size-6;
 }
 
 .archive__item-teaser {
